{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 40,
  "lineage": "382325fd-b318-615c-08d2-74c9deda3a13",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pubonline-app-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0e5d9c7acc336f1",
            "arn": "arn:aws:ec2:us-east-1:637423198562:instance/i-0f6ff82c76d461c1f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f6ff82c76d461c1f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pubonline-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02902393fcfa55f0d",
            "private_dns": "ip-10-0-1-156.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.156",
            "public_dns": "ec2-54-86-135-173.compute-1.amazonaws.com",
            "public_ip": "54.86.135.173",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06e7b57301bd5b469",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08060dc09e4b74a91",
            "tags": {
              "name": "pubonline-app-ec2"
            },
            "tags_all": {
              "name": "pubonline-app-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05ab44ea6d8e753f3"
            ]
          },
          "dependencies": [
            "aws_key_pair.pubonline-app-key",
            "aws_security_group.pubonline-app-sg",
            "aws_subnet.pubonline-app-subnet",
            "aws_vpc.pubonline-app-vpc",
            "data.aws_ami.pubonline-app-ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pubonline-app-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423198562:internet-gateway/igw-00a5cb641c6ea5053",
            "id": "igw-00a5cb641c6ea5053",
            "owner_id": "637423198562",
            "tags": {
              "name": "pubonline-app-gateway"
            },
            "tags_all": {
              "name": "pubonline-app-gateway"
            },
            "vpc_id": "vpc-0e9ed6d02cf3b18b6"
          },
          "dependencies": [
            "aws_vpc.pubonline-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pubonline-app-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00a5cb641c6ea5053",
            "id": "r-rtb-0c1da1b6a933481911080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c1da1b6a93348191",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.pubonline-app-gateway",
            "aws_route_table.pubonline-app-route-table",
            "aws_vpc.pubonline-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubonline-app-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423198562:route-table/rtb-0c1da1b6a93348191",
            "id": "rtb-0c1da1b6a93348191",
            "owner_id": "637423198562",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "name": "pubonline-app-route-table"
            },
            "tags_all": {
              "name": "pubonline-app-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9ed6d02cf3b18b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pubonline-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubonline-app-route-table-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4385a0e1daeda99",
            "route_table_id": "rtb-0c1da1b6a93348191",
            "subnet_id": "subnet-08060dc09e4b74a91"
          },
          "dependencies": [
            "aws_route_table.pubonline-app-route-table",
            "aws_subnet.pubonline-app-subnet",
            "aws_vpc.pubonline-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pubonline-app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423198562:security-group/sg-05ab44ea6d8e753f3",
            "description": "Security Group for Pubonline Application",
            "egress": [],
            "id": "sg-05ab44ea6d8e753f3",
            "ingress": [],
            "name": "pubonline-app-sg",
            "name_prefix": "",
            "owner_id": "637423198562",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e9ed6d02cf3b18b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pubonline-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-rules-http-in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2629374843",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05ab44ea6d8e753f3",
            "security_group_rule_id": "sgr-0ae22d62fef31ecb7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.pubonline-app-sg",
            "aws_vpc.pubonline-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-rules-pub-out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3133294482",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05ab44ea6d8e753f3",
            "security_group_rule_id": "sgr-08c6d8b5dcb557e01",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.pubonline-app-sg",
            "aws_vpc.pubonline-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-rules-ssh-in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2803322623",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05ab44ea6d8e753f3",
            "security_group_rule_id": "sgr-081217b7ea8bc10de",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.pubonline-app-sg",
            "aws_vpc.pubonline-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubonline-app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423198562:subnet/subnet-08060dc09e4b74a91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08060dc09e4b74a91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423198562",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "pubonline-app-subnet-pub"
            },
            "tags_all": {
              "name": "pubonline-app-subnet-pub"
            },
            "vpc_id": "vpc-0e9ed6d02cf3b18b6"
          },
          "dependencies": [
            "aws_vpc.pubonline-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pubonline-app-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423198562:vpc/vpc-0e9ed6d02cf3b18b6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07206368d702b0cee",
            "default_route_table_id": "rtb-0482007c152d50225",
            "default_security_group_id": "sg-0e214d013ae927340",
            "dhcp_options_id": "dopt-0d6f4b07fe85bce72",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e9ed6d02cf3b18b6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0482007c152d50225",
            "owner_id": "637423198562",
            "tags": {
              "name": "pubonline-app-vpc"
            },
            "tags_all": {
              "name": "pubonline-app-vpc"
            }
          }
        }
      ]
    }
  ]
}